--- a/content/docs/core-concepts/communication/events.mdx
+++ b/content/docs/core-concepts/communication/events.mdx
@@ -1,11 +1,11 @@
 ---
-title: Event System
-description: Comprehensive guide to the event-driven architecture and event handling in elizaOS
+title: "Event System"
+description: "Comprehensive guide to the event-driven architecture and event handling in ElizaOS"
 ---
 
 # Event System
 
-elizaOS implements a comprehensive event-driven architecture that enables loose coupling between components. The event system facilitates communication between agents, plugins, and services through a standardized event interface with typed payloads and handler registration.
+ElizaOS implements a comprehensive event-driven architecture that enables loose coupling between components. The event system facilitates communication between agents, plugins, and services through a standardized event interface with typed payloads and handler registration.
 
 ## Event Types
 
