--- a/content/docs/core-concepts/communication/message-bus.mdx
+++ b/content/docs/core-concepts/communication/message-bus.mdx
@@ -1,11 +1,11 @@
 ---
-title: Message Bus
-description: Event-driven communication system for inter-component messaging in elizaOS
+title: "Message Bus Architecture"
+description: "Event-driven communication system for inter-component messaging in ElizaOS"
 ---
 
-# Message Bus
+# Message Bus Architecture
 
-The elizaOS message bus provides a centralized event-driven communication system that enables loose coupling between components. It facilitates message distribution from the server to agents and handles various system events throughout the application lifecycle.
+The ElizaOS message bus provides a centralized event-driven communication system that enables loose coupling between components. It facilitates message distribution from the server to agents and handles various system events throughout the application lifecycle.
 
 ## Architecture Overview
 
