--- a/content/docs/core-concepts/data-state/database.mdx
+++ b/content/docs/core-concepts/data-state/database.mdx
@@ -1,11 +1,11 @@
 ---
 title: Database Architecture
-description: Understanding Eliza's database architecture, adapters, and the Entity-Component System
+description: Understanding ElizaOS database architecture, adapters, and the Entity-Component System with actual implementation details
 ---
 
-## Overview
+# Database Architecture
 
-Eliza uses a flexible database architecture built around the Entity-Component System (ECS) pattern. This design allows for extensible data storage with support for multiple database backends through a unified adapter interface.
+ElizaOS uses a flexible database architecture built around the Entity-Component System (ECS) pattern. This design allows for extensible data storage with support for multiple database backends through a unified adapter interface.
 
 ## Core Architecture
 
