--- a/content/docs/core-concepts/data-state/knowledge-management.mdx
+++ b/content/docs/core-concepts/data-state/knowledge-management.mdx
@@ -1,11 +1,11 @@
 ---
 title: Knowledge Management
-description: How Eliza manages agent knowledge, facts, and document processing for intelligent context retrieval
+description: How ElizaOS manages agent knowledge, facts, and document processing for intelligent context retrieval with actual implementation details
 ---
 
-## Overview
+# Knowledge Management
 
-Eliza's knowledge management system provides agents with the ability to store, organize, and retrieve structured knowledge. This includes facts about users, documents, and domain-specific information that can be used to enhance conversations and decision-making.
+ElizaOS knowledge management system provides agents with the ability to store, organize, and retrieve structured knowledge. This includes facts about users, documents, and domain-specific information that can be used to enhance conversations and decision-making.
 
 ## Knowledge Types
 
