--- a/content/docs/core-concepts/data-state/memory-system.mdx
+++ b/content/docs/core-concepts/data-state/memory-system.mdx
@@ -1,11 +1,11 @@
 ---
 title: Memory System
-description: Understanding Eliza's memory system, including storage, retrieval, and semantic search capabilities
+description: Understanding ElizaOS memory system, including storage, retrieval, and semantic search capabilities with actual implementation details
 ---
 
-## Overview
+# Memory System
 
-Eliza's memory system provides persistent storage and retrieval of conversations, facts, and documents with built-in support for embeddings and semantic search. The system is designed to handle different types of memories with appropriate metadata and efficient querying.
+ElizaOS provides a sophisticated memory system for persistent storage and retrieval of conversations, facts, and documents with built-in support for embeddings and semantic search. The system is designed to handle different types of memories with appropriate metadata and efficient querying.
 
 ## Memory Types
 
